tablet res ready

--- a/source/index.html
+++ b/source/index.html
@@ -97,29 +97,37 @@
               <svg class="advantages__img" width="52" height="56">
                 <use xlink:href="../img/sprite.svg#speed"></use>
               </svg>
-              <h3 class="advantages__item-name">Скорость</h3>
-              <p class="advantages__text">Готовый напиток всегда под рукой — просто открой банку</p>
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__item-name">Скорость</h3>
+                <p class="advantages__text">Готовый напиток всегда под рукой — просто открой банку</p>
+              </div>
             </li>
             <li class="advantages__item">
               <svg class="advantages__img" width="52" height="56">
                 <use xlink:href="../img/sprite.svg#comfort"></use>
               </svg>
-              <h3 class="advantages__item-name">Удобство</h3>
-              <p class="advantages__text">Легко помещается и в карман, и в маленькую сумочку</p>
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__item-name">Удобство</h3>
+                <p class="advantages__text">Легко помещается и в карман, и в маленькую сумочку</p>
+              </div>
             </li>
             <li class="advantages__item">
               <svg class="advantages__img" width="52" height="56">
                 <use xlink:href="../img/sprite.svg#courage"></use>
               </svg>
-              <h3 class="advantages__item-name">Бодрость</h3>
-              <p class="advantages__text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__item-name">Бодрость</h3>
+                <p class="advantages__text">Сбалансированная доза кофеина даст мощный заряд энергии</p>
+              </div>
             </li>
             <li class="advantages__item">
               <svg class="advantages__img" width="52" height="56">
                 <use xlink:href="../img/sprite.svg#eco"></use>
               </svg>
-              <h3 class="advantages__item-name">Экологичность</h3>
-              <p class="advantages__text">Вся упаковка сделана из перерабатываемых материалову</p>
+              <div class="advantages__text-wrapper">
+                <h3 class="advantages__item-name">Экологичность</h3>
+                <p class="advantages__text">Вся упаковка сделана из перерабатываемых материалову</p>
+              </div>
             </li>
           </ul>
         </section>
@@ -215,7 +223,7 @@
             </div>
             <ul class="products__list">
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-1.webp 1x, ./img/catalog/coffee-can-1@2x.webp 2x">
 
@@ -226,11 +234,16 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-2.webp 1x, ./img/catalog/coffee-can-2@2x.webp 2x">
 
@@ -241,11 +254,16 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-3.webp 1x, ./img/catalog/coffee-can-3@2x.webp 2x">
 
@@ -256,11 +274,16 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-4.webp 1x, ./img/catalog/coffee-can-4@2x.webp 2x">
 
@@ -271,11 +294,16 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-5.webp 1x, ./img/catalog/coffee-can-5@2x.webp 2x">
 
@@ -286,11 +314,16 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
               <li class="products__item">
-                <div class="special__img-wrapper">
+                <div class="products__img-wrapper">
                   <picture>
                     <source type="image/webp" srcset="./img/catalog/coffee-can-6.webp 1x, ./img/catalog/coffee-can-6@2x.webp 2x">
 
@@ -301,46 +334,57 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">В корзину</button>
+                  <button class="products__button" type="button">
+                    <svg width="20" height="16">
+                      <use xlink:href="../img/sprite.svg#basket-button"></use>
+                    </svg>
+                    <span>В корзину</span>
+                  </button>
                 </div>
               </li>
             </ul>
-            <div class="products__pagination pagination">
-              <ul class="pagination__list">
-                <li class="pagination__item">
-                  <a class="pagination__link">
-                    <svg width="6" height="10">
-                      <use xlink:href="../img/sprite.svg#previous"></use>
-                    </svg>
-                    <span class="pagination__link-name">Назад</span>
-                  </a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link">1</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link pagination__link--active">2</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link">3</a>
-                </li>
-                <li class="pagination__item">
-                  <a class="pagination__link">
-                    <svg width="6" height="10">
-                      <use xlink:href="../img/sprite.svg#next"></use>
-                    </svg>
-                    <span class="pagination__link-name">Вперёд</span>
-                  </a>
-                </li>
-            </div>
+          </div>
+          <div class="products__pagination pagination">
+            <ul class="pagination__list">
+              <li class="pagination__item">
+                <a class="pagination__link pagination__link--utter">
+                  <svg width="6" height="10">
+                    <use xlink:href="../img/sprite.svg#previous"></use>
+                  </svg>
+                  <span class="pagination__link-name">Назад</span>
+                </a>
+              </li>
+              <li class="pagination__item">
+                <a class="pagination__link">1</a>
+              </li>
+              <li class="pagination__item">
+                <a class="pagination__link pagination__link--active">2</a>
+              </li>
+              <li class="pagination__item">
+                <a class="pagination__link">3</a>
+              </li>
+              <li class="pagination__item">
+                <a class="pagination__link pagination__link--utter">
+                  <svg width="6" height="10">
+                    <use xlink:href="../img/sprite.svg#next"></use>
+                  </svg>
+                  <span class="pagination__link-name">Вперёд</span>
+                </a>
+              </li>
           </div>
         </section>
       </div>
       <!-- *Map -->
       <section class="map">
         <h3 class="visually-hidden">Адрес на карте.</h3>
-        <iframe
+        <iframe  class="map__frame map--mobile"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.822608413316!2d30.31522021609819!3d59.968265981886944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665562004219!5m2!1sru!2sby" width="320" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <iframe class="map__frame map--tablet"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665593400778!5m2!1sru!2sby" width="768" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <iframe class="map__frame map--desktop"
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665593400778!5m2!1sru!2sby" width="1440" height="540" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
       </section>
     </main>
@@ -348,11 +392,13 @@
       <div class="footer__wrapper">
         <div class="footer__navigation-wrapper">
           <a class="footer__logo logo" href="#">
-          <span class="footer__logo-text logo__text">d</span>
+          <span class="footer__logo-text--short logo__text">d</span>
+          <span class="footer__logo-text--full logo__text">drink</span>
           <svg width="32" height="36">
             <use xlink:href="../img/sprite.svg#logo"></use>
           </svg>
-          <span class="header__logo-text logo__text">g</span>
+          <span class="footer__logo-text--short logo__text">g</span>
+          <span class="footer__logo-text--full logo__text">go</span>
           <span class="visually-hidden">Логотип компании.</span>
           </a>
           <span class="header__text">Интернет-магазин кофейных напитков</span>
