desktop res ready

--- a/source/index.html
+++ b/source/index.html
@@ -377,31 +377,27 @@
       <!-- *Map -->
       <section class="map">
         <h3 class="visually-hidden">Адрес на карте.</h3>
-        <iframe  class="map__frame map--mobile"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.822608413316!2d30.31522021609819!3d59.968265981886944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665562004219!5m2!1sru!2sby" width="320" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-        <iframe class="map__frame map--tablet"
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665593400778!5m2!1sru!2sby" width="768" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-        <iframe class="map__frame map--desktop"
-          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7987.290429285352!2d30.3174089!3d59.968266!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665593400778!5m2!1sru!2sby" width="1440" height="540" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        <iframe  class="map__frame"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.822608413316!2d30.31522021609819!3d59.968265981886944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sby!4v1665562004219!5m2!1sru!2sby" width="100%" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__wrapper">
         <div class="footer__navigation-wrapper">
-          <a class="footer__logo logo" href="#">
-          <span class="footer__logo-text--short logo__text">d</span>
-          <span class="footer__logo-text--full logo__text">drink</span>
-          <svg width="32" height="36">
-            <use xlink:href="../img/sprite.svg#logo"></use>
-          </svg>
-          <span class="footer__logo-text--short logo__text">g</span>
-          <span class="footer__logo-text--full logo__text">go</span>
-          <span class="visually-hidden">Логотип компании.</span>
-          </a>
-          <span class="header__text">Интернет-магазин кофейных напитков</span>
+          <div class="footer__logo-wrapper">
+            <a class="footer__logo logo" href="#">
+              <span class="footer__logo-text--short logo__text">d</span>
+              <span class="footer__logo-text--full logo__text">drink</span>
+              <svg width="32" height="36">
+                <use xlink:href="../img/sprite.svg#logo"></use>
+              </svg>
+              <span class="footer__logo-text--short logo__text">g</span>
+              <span class="footer__logo-text--full logo__text">go</span>
+              <span class="visually-hidden">Логотип компании.</span>
+            </a>
+            <span class="footer__text">Интернет-магазин кофейных напитков</span>
+          </div>
           <ul class="footer__socials socials">
             <li class="socials__item">
               <a class="socials__link">
