put props in order, add js for toggle menu btn

--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
   <title>Coffeeshop</title>
 </head>
 
-<body class="body">
+<body class="body body--nojs">
   <div class="body__wrapper">
     <header class="header">
       <div class="header__logo-wrapper">
@@ -26,7 +26,7 @@
         </a>
         <span class="header__text">Интернет-магазин кофейных напитков</span>
       </div>
-      <nav class="header__navigation header__navigation-button--closed">
+      <nav class="header__navigation header__navigation--closed">
         <button class="header__navigation-button" type="button">
           <span class="visually-hidden">Открыть меню.</span>
         </button>
@@ -151,7 +151,7 @@
                   <input  class="price__input" type="text" name="price" placeholder="0" max="1000">
                 </label>
                 <label class="price__input-label">
-                  <input  class="price__input" type="text" name="price" placeholder="1000" value="1000">
+                  <input  class="price__input" type="text" name="price" placeholder="1000" value="900">
                 </label>
               </div>
             </fieldset>
