--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
             <div class="special__offer">
               <del class="special__old-price">295₽</del>
               <span class="special__new-price">225₽</span>
-              <button class="special__button" type="button">Заказать</button>
+              <button class="special__button button" type="button">Заказать</button>
             </div>
           </div>
         </section>
@@ -207,8 +207,8 @@
               </label>
             </fieldset>
             <fieldset class="catalog__buttons">
-              <button class="catalog__button catalog__button--submit" type="submit">Применить фильтр</button>
-              <button class="catalog__button catalog__button--reset" type="reset">Сбросить фильтр</button>
+              <button class="catalog__button button" type="submit">Применить фильтр</button>
+              <button class="catalog__button button button--light" type="reset">Сбросить фильтр</button>
             </fieldset>
           </form>
           <div class="catalog__products products">
@@ -234,7 +234,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
@@ -254,7 +254,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
@@ -274,7 +274,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
@@ -294,7 +294,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
@@ -314,7 +314,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
@@ -334,7 +334,7 @@
                 <p class="products__text">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
                 <div class="products__offer">
                   <p class="products__price">225₽</p>
-                  <button class="products__button" type="button">
+                  <button class="products__button button" type="button">
                     <svg width="20" height="16">
                       <use xlink:href="../img/sprite.svg#basket-button"></use>
                     </svg>
